--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -3,16 +3,35 @@ footer {
 }
 
 .footerWrapper {
-	background: peachpuff;
-}
-
-.footerContact {
-	width: 50%;
-	padding-left: 7.5%;
+	background: #333;
+	color: #fff;
 }
 
 .footerSocial {
 	width: 50%;
+	padding-left: 7.5%;
+
+	a {
+		color: #fff;
+		font-size: 24px;
+		padding: 3vh 3vh 0 0;
+	}
+
+	a:hover {
+		color: #FF913C;
+	}
+}
+
+.footerCopyright {
+	width: 50%;
 	text-align: right;
 	padding-right: 7.5%;
+
+	a {
+		color: #FF913C;
+	}
+
+	a:hover {
+		color: #fff;
+	}
 }
