--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -6,16 +6,50 @@
 	li {
 		display: inline-block;
 		margin-right: 10px;
+
 		a {
-			padding: 10px;
+			padding: 5px;
 			color: #333;
+			vertical-align: middle;
+			-webkit-transform: translateZ(0);
+			transform: translateZ(0);
+			box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+			-webkit-backface-visibility: hidden;
+			backface-visibility: hidden;
+			-moz-osx-font-smoothing: grayscale;
+			position: relative;
+			overflow: hidden;
+		}
+
+		a:before {
+		  content: "";
+		  position: absolute;
+		  z-index: -1;
+		  left: 0;
+		  right: 100%;
+		  bottom: 0;
+		  background: #333;
+		  height: 1px;
+		  -webkit-transition-property: right;
+		  transition-property: right;
+		  -webkit-transition-duration: 0.3s;
+		  transition-duration: 0.3s;
+		  -webkit-transition-timing-function: ease-out;
+		  transition-timing-function: ease-out;
+		}
+
+		a:hover, a:focus {
+			color: #FF913C; 
+		}
+
+		a:hover:before, a:focus:before, a:active:before {
+		  right: 0;
 		}
 	}
 }
 
 .navContainer {
 	height: 8.5vh;
-	background: #fff;
 	width: 100%;
 	z-index: 10;
 }
@@ -24,6 +58,7 @@
 	justify-content: space-between;
 	max-width: 85%;
 	margin: auto;
+	letter-spacing: 2px;
 
 	h1 {
 		margin: 0;
