--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,11 +15,6 @@
 @import 'comments';
 @import 'footer';
 
-/*
-====================================
-Mixins
-====================================
-*/
 
 
 /*
@@ -30,7 +25,6 @@ Default Styling
 
 html {
 	position: relative;
-	// background: peachpuff;
 }
 
 img {
@@ -77,6 +71,14 @@ body {
 	// background: peachpuff;
 	width: 50%;
 	padding: 2% 7.5%;
+
+	.postLink a {
+		color: $hoverColor;
+	}
+
+	.postLink a:hover {
+		color: #333;
+	}
 }
 
 .accentBorder {
@@ -94,14 +96,10 @@ body {
 }
 
 .entry-meta {
-	font-family: 'Cutive Mono', sans-serif;
 	align-items: center;
 	justify-content: center;
 }
 
-.entry-utility {
-	font-family: 'Cutive Mono', sans-serif;
-}
 
 
 
